# lunwen

./: .gitignore  README.md  findings.md  progress.md  run_full_consensus_safe_experiment.sh  task_plan.md
.claude/worktrees/agent-a3205f4ac5ef273bb/: CLAUDE.md  findings.md  pyproject.toml
.claude/worktrees/agent-a3205f4ac5ef273bb/data/: benchmark.jsonl
.claude/worktrees/agent-a3205f4ac5ef273bb/docs/: code_cleanup_report.md  final_experiment_checklist.md
.claude/worktrees/agent-a3205f4ac5ef273bb/references_merged_for_claude/: MANIFEST.txt  README_MERGED.txt  reading_order.txt
.claude/worktrees/agent-a3205f4ac5ef273bb/references_merged_for_claude/claude_prompts/: prompt_update_with_extra_references.txt
.claude/worktrees/agent-a3205f4ac5ef273bb/references_merged_for_claude/extra_paper_notes/: 02_OptiRepair_supply_chain_repair.txt  08_LLMOPT_five_element_formulation.txt  09_OptMATH_bidirectional_data_synthesis.txt
.claude/worktrees/agent-a3205f4ac5ef273bb/references_merged_for_claude/matrices/: related_work_comparison_extra.txt
.claude/worktrees/agent-a3205f4ac5ef273bb/references_merged_for_claude/project_drafts/: ReplenishVerifier_中文版_方法图版_text.txt  ReplenishVerifier_结构验证增强库存补货优化建模论文初稿_text.txt
.claude/worktrees/agent-a3205f4ac5ef273bb/references_merged_for_claude/uploaded_full_texts/: StepORLM_2026_ICLR_fulltext.txt
.claude/worktrees/agent-a3205f4ac5ef273bb/scripts/: run_candidate_selection.py
.claude/worktrees/agent-a3205f4ac5ef273bb/tests/: test_lp_parser.py  test_strong_baselines.py
docs/: code_and_claim_risk_audit.md  code_cleanup_report.md
(+822 files in other folders)
