[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "replenishverifier"
version = "0.1.0"
description = "LP-structure-grounded verification for LLM-based replenishment optimization modeling."
requires-python = ">=3.10"
dependencies = [
  "pulp>=2.8.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
  "jsonlines>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
